<resources>
    <string name="app_name">team12345</string>
    <string name="from">from</string>
    <string name="brand_1">1</string>
    <string name="brand_2">2</string>
    <string name="brand_3">3</string>
    <string name="brand_4">4</string>
    <string name="brand_5">5</string>

    <!-- Login -->
    <string name="hint_email_phone">Phone Number or Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_create_account">CREATE NEW ACCOUNT</string>
    <string name="btn_create_account_login">CREATE NEW ACCOUNT</string>
    <string name="btn_forgot_password">FORGOT PASSWORD</string>

    <!-- Registration -->
    <string name="title_sign_up">Sign up with Email</string>
    <string name="welcome_title">Tham gia cùng chúng tôi</string>
    <string name="subtitle_sign_up">Get chatting with friends and family today by signing up for our chat app!</string>

    <string name="label_your_name">Your name</string>
    <string name="label_your_email">Your email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>

    <string name="btn_register">Create an account</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="back">Back</string>

    <!-- Validation Errors -->
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_field_empty">This field cannot be empty</string>
    <string name="error_password_short">Password must be at least 6 characters</string>
    <string name="error_password_mismatch">Passwords do not match</string>
</resources>